# archinstall

./: .buildinfo  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pypirc  .readthedocs.yaml  .readthedocs.yml  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE.md  PKGBUILD  README.md  README.ru.md  README.uz.md  VERSION  __init__.py  archinstall.py  base.mo  base.po  build_iso.sh  debug.txt  dev_vm.sh  diskmanager2.py  examples  genindex-all.html  genindex.html  index.html  install_aur  installer.py  make.sh  make_offline  mypy-strict.ini  mypy.ini  nvchecker.toml  objects.inv  package-lock.json  (+15 more)
.doctrees/: environment.pickle  index.doctree
.doctrees/archinstall/: Installer.doctree  plugins.doctree
.doctrees/examples/: python.doctree
.doctrees/help/: discord.doctree  known_issues.doctree  report_bug.doctree
.doctrees/installing/: guided.doctree  python.doctree
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: 01_bug.yml  02_feature.yml
.github/scripts/: check_pot_freshness.py
.github/workflows/: bandit.yaml  dependencycheck.yaml  flake8.yaml  github-pages.yml  github-pages2.yml  guarddog.yaml  guarddog.yml  iso-build.yaml  lint-python.yaml  main.yaml  mypy.yaml  pkg-build.yaml  pkg_build.yaml  pylint.yaml  pyright.yaml  pytest.yaml  python-build.yml  python-publish.yml  qemu-tests.yaml  ruff-format.yaml  ruff-lint.yaml  ruff.yaml  translation-check.yaml  uki-build.yaml
PKGBUILD/archinstall/: PKGBUILD
PKGBUILD/archinstall-bin/: PKGBUILD
PKGBUILD/python-archinstall/: PKGBUILD
PKGBUILDs/archinstall/: PKGBUILD
PKGBUILDs/archinstall-bin/: PKGBUILD
PKGBUILDs/python-archinstall/: PKGBUILD
_sources/: index.rst.txt
_sources/archinstall/: plugins.rst.txt
_sources/examples/: python.rst.txt
_sources/help/: discord.rst.txt  known_issues.rst.txt  report_bug.rst.txt
_sources/installing/: guided.rst.txt  python.rst.txt
_static/: documentation_options.js  logo.psd
archinstall/: 1  Installer.html  __init__.py  __main__.py  main.py  plugins.html
archinstall/applications/: AUR_helper.py  audio.py  aur_helper.py  bluetooth.py  camera.py  editor.py  firewall.py  fonts.py  management.py  monitor.py  power_management.py  print_service.py  printer.py
archinstall/default_profiles/: custom.py  desktop.py  minimal.py  profile.py  server.py  tailored.py  wayland.py  xorg.py
archinstall/diskmanager/: dataclasses.py  discovery.py  generator.py  helper.py  output.py  partition_list.py  partition_menu.py
archinstall/examples/: custom-command-sample.json  guided.py  interactive_installation.py  minimal_installation.py
archinstall/lib/: args.py  boot.py  command.py  configuration.py  crypt.py  disk.py  exceptions.py  general.py  gfx_drivers.py  global_menu.py  hardware.py  installer.py  linux_path.py  locale.py  locale_helpers.py  log.py  luks.py  menu.py  mirrors.py  networking.py  output.py  packages.py  pacman.py  pathnames.py  plugins.py  profiles.py  profiles_handler.py  profiles_v2.py  pulgins.py  resumehandler.py  secure_boot.py  selection_menu.py  services.py  share_log.py  simple_menu.py  storage.py  switch_mirror.py  systemd.py  translation.py  translationhandler.py  (+3 more)
archinstall/locales/: README.md  base.mo  base.pmo  base.po  base.pot  cyrillic.json  ku  languages.json  locales_generator.sh  messages.mo
archinstall/profiles/: 52-54-00-12-34-56.py  bspwm.py  budgie.py  custom.py  cutefish.py  desktop.py  gnome.py  minimal.py  profile.py  profiles.py  qtile.py  server.py  sway.py  tailored.py  xorg.py
archinstall/profiles_v2/: custom.py  desktop.py  minimal.py  profiles_v2.py  server.py  tailored.py  xorg.py
archinstall/scripts/: guided.py  list.py  minimal.py  only_hd.py  rescue.py  swiss.py  unattended.py
archinstall/tui/: __init__.py  binding_descriptions.py  components.py  curses_menu.py  help.py  menu_item.py  result.py  rich.py  table_menu.py  types.py
cli_parameters/config/: custom_commands.html  disk_config.html  disk_encryption.html
deployments/: 00:01:23:45:67:89.json  00:11:22:33:44:55.json  08:00:27:36:83:9b.json  08:00:27:6f:0c:25.json  08:00:27:E0:E0:E6.json  08:00:27:d4:fd:ef.json  08:00:27:e0:e0:e6.json  38:00:25:5a:ed:d5.json  9c:d6:43:ae:11:4f.json  default.json  gitea.json  gittea  pentest.json  vmhost.json  workstation.json  workstation_aur.json  workstation_unattended.json
deployments/applications/: awesome.json  kde.json  (+1 more)
docs/: README.md  conf.py  index.rst  pull_request_template.md  requirements.txt
examples/: .env  auto_discovery_mounted.py  base-config.json  commons.py  config-sample.json  creds-sample.json  custom-command-sample.json  disk_layouts-sample.json  diskmanager.py  diskmanager_old.py  full_automated_installation.py  guided.py  guided_installation.py  guided_unattended.py  interactive_installation.py  mac_address_installation.py  main_example.py  minimal.py  minimal_installation.py  minimal_orig.py  only_hd.py  only_hd_installation.py  python.html  swiss.py  unattended.py
help/: discord.html  known_issues.html  report_bug.html
helpers/: disk.py  general.py  user_interaction.py
installing/: guided.html  python.html
profiles/: 00:01:23:45:67:89.json  52-54-00-12-34-56.py  awesome.py  budgie.py  cinnamon.py  cutefish.py  deepin.py  dekstop.py  desktop.py  desktop_gnome.json  desktop_kde.json  enlightenment.py  gnome.py  i3-gaps.py  i3-wm.py  i3.py  kde-wayland.py  kde.py  lxqt.py  mate.py  minimal.py  minimal_example.json  qtile.py  server.py  sway.py  wayland.py  webserver.json  workstation.json  xfce4.py  xorg.py
profiles_v2/: custom.py  desktop.py  enlightenment.py  kde.py  minimal.py  profiles.py  profiles_v2.py  qtile.py  server.py  tailored.py  xorg.py
scripts/: derive_packages.py  dev_vm.sh  pot_tools.py
test_tooling/: check_binding_descriptions.py
tests/: conftest.py  test_args.py  test_configuration_output.py  test_global_menu_ui.py  test_mirrorlist.py  test_password_strength.py  test_plugins.py  test_profiles.py  test_refind_installation.py  test_share_log.py  test_ssid_parsing.py  test_version_def.py  test_wifi_network_from_wpa.py
(+479 files in other folders)
