[metadata]
name = archinstall
version = attr: archinstall.__version__
description = Arch Linux installer - guided, templates etc.
author = Anton Hvornum
author_email = anton@hvornum.se
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL
license_files =
    LICENSE
project_urls =
    Source = https://github.com/archlinux/archinstall
    Documentation = https://archinstall.readthedocs.io/
classifers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >= 3.8

[options.packages.find]
include =
    archinstall
    archinstall.*

[options.package_data]
archinstall =
    examples/*.py
    profiles/*.py
    profiles/applications/*.py

[options.entry_points]
console_scripts =
    archinstall = archinstall:run_as_a_module
